fix issue where modal shifts content

--- a/styles/utilities.scss
+++ b/styles/utilities.scss
@@ -3,5 +3,11 @@
 
   .modal-open {
     overflow: hidden;
+    margin-right: 1.8rem !important;
+    padding-left: 0rem;
+    padding-top: 0rem;
+    padding-right: 0rem;
+    margin-left: 0;
+    margin-top: 0;
   }
 }
